{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "Translate",
            "id": "e4136234-4153-42f1-9058-5f4c13be6495",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "8a1a1951-20e3-4cc4-ab63-6c3b145fad09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59eac599-2d2c-4c05-bf53-e25a0c6db1dd",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "4c58a973-a67f-49ce-8408-06ee3a3a26ae",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60ac2f66-1e0e-482c-a4d0-c9ad3833acfd",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9ea240f0-be4f-40d3-9bf9-94929b52adb4",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d32e926f-9382-4941-9a5a-4fda51d61e6c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d752e77-1c8d-44b7-9b55-759feef965f1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Power",
            "id": "3102d443-5e50-4b5b-814a-4eb78bbde022",
            "actions": [
                {
                    "name": "DronePowerSwitch",
                    "type": "Button",
                    "id": "3ea32bcc-6fec-4d4f-924c-f9e9f54dd61e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae9991ec-70e9-4589-b97b-ed277925cec8",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DronePowerSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "392ea4de-9813-4213-9b7a-4d1f49dc4701",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DronePowerSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WayPoint",
            "id": "dd057afb-1c18-445f-98b3-addf3b6772d3",
            "actions": [
                {
                    "name": "SaveWayPoint",
                    "type": "Button",
                    "id": "86e961a7-83b0-459d-9b54-5af7bcc4f122",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteWayPoint",
                    "type": "Button",
                    "id": "c0647a2a-d6e8-4e1a-911e-8151fd68496b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scroll WayPoint",
                    "type": "Button",
                    "id": "31bd257a-0c6c-4186-9afd-7b97d31be73e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae6ee82c-5d31-4a2e-8657-6ce3f5c1c315",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveWayPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1956ed00-c954-468e-9139-1dd46cf3b920",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteWayPoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "fce4c0db-acbb-4910-a974-9410f412ff68",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll WayPoint",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "959cd8e2-a1d2-4ea2-830d-d20867ac7bd6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll WayPoint",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1606f667-1de3-479c-a9a2-7413a13085ca",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll WayPoint",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "ModeSelection",
            "id": "38432354-dfe5-4b67-9840-8e375479792c",
            "actions": [
                {
                    "name": "ChangeMode",
                    "type": "Button",
                    "id": "e1cdc492-3231-45b4-acba-77d05f521254",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1914575-79bb-4e49-a2ff-02f5e43c8601",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}